<resources>
    <string name="app_name">Cash Tracker</string>
    <string name="balance_text">Баланс:</string>
    <string name="income_month_text">Доход:</string>
    <string name="outcome_month_text">Расход:</string>
    <string name="title_activity_diagram">Диаграмма</string>
    <string name="title_activity_journal">Журнал</string>
    <string name="journal_from">С: </string>
    <string name="journal_to">По:</string>
    <string name="title_activity_add">Добавить</string>
    <string name="add_summ_text">Сумма</string>
    <string name="add_date_text">Дата</string>
    <string name="add_category_text">Категория:</string>
    <string name="add_type_text">Тип:</string>
    <string name="add_income_type">Доход</string>
    <string name="add_outcome_type">Расход</string>
    <string name="add_desc_text">Описание</string>
    <string name="title_activity_category">Категории</string>
    <string name="add_color_text">Цвет:</string>
    <string name="create_category_hint">Имя категории</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_calculator">Калькулятор</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_closer">Drawer Closed</string>
    <string name="title_activity_chart">Графики</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
