<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.and.cashtracker.AddActivity"
    tools:showIn="@layout/activity_add"
    android:layout_marginTop="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_summa_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_summ_text"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_summa_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_date_text"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/add_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_type_text"
        app:layout_constraintTop_toBottomOf="@id/add_date_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <RadioGroup
        android:id="@+id/add_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_type_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/add_radio_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_outcome_type"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/add_radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_income_type" />
    </RadioGroup>

    <TextView
        android:id="@+id/add_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_text"
        app:layout_constraintTop_toBottomOf="@id/add_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_category_text">
        <Spinner
            android:id="@+id/add_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="8dp"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/add_category_config_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/icon_settings"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@id/add_category_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:tint="@color/colorAccent"/>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_add"
        app:layout_constraintTop_toBottomOf="@+id/add_constraint"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"/>

</android.support.constraint.ConstraintLayout>
