<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.and.cashtracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/main_balance_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_text"
                android:textSize="24sp"
                android:textColor="@color/mainTextColor"/>

            <TextView
                android:id="@+id/main_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9001 UAH"
                android:textColor="@color/balanceColor"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/main_balance_info"
                app:layout_constraintTop_toBottomOf="@id/main_balance_info" />

            <TextView
                android:id="@+id/main_income_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_month_text"
                android:textSize="20sp"
                android:textColor="@color/mainTextColor"
                app:layout_constraintTop_toBottomOf="@id/main_balance" />

            <TextView
                android:id="@+id/main_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2001 UAH"
                android:textColor="@color/incomeColor"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/main_balance"
                app:layout_constraintTop_toBottomOf="@id/main_income_info" />

            <TextView
                android:id="@+id/main_outcome_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outcome_month_text"
                android:textSize="20sp"
                android:textColor="@color/mainTextColor"
                app:layout_constraintTop_toBottomOf="@id/main_income" />

            <TextView
                android:id="@+id/main_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200 UAH"
                android:textColor="@color/outcomeColor"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/main_balance"
                app:layout_constraintTop_toBottomOf="@id/main_outcome_info" />

            <TextView
                android:id="@+id/main_dates_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_outcome"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="center"
                android:textColor="@color/mainTextColor"
                android:text="01-01-2018 - 18-01-2018"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/main_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_card"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>
